2020-08-16  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Added JSS badge

2020-06-15  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml: Switch to bionic, change to derive package and version

2020-05-28  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

2020-05-28  Adam Cozzette  <acozzette@google.com>

	* src/wrapper_ServiceDescriptor.cpp: Support FindMethodByName() taking
	std::string_view
	* src/RcppMacros.h: Idem

2020-03-26  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.4.17

	* README.md: Add a last-commit badge

2020-03-21  Dirk Eddelbuettel  <edd@debian.org>

	* src/wrapper_Message.cpp: Condition use of ByteSizeLong on ProtoBuf
	version 3.6.0 or later to permit compilation on older systems

	* inst/tinytest/test_addressbook.R: Skip JSON tests if ProtoBuf 2.*

	* configure.ac: Extract version from DESCRIPTION via awk
	* configure: Regenerated

2020-03-19  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.4.16

	* src/wrapper_Message.cpp: Switch to ByteSizeLong() to appease a
	clang warning on deprecated declarations
	* man/bytesize.Rd: Relax a comparison from identical() to all.equal()

2020-03-18  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* R/debug_string.R: Correct method argument
	* man/Message-class.Rd: Alias toJSON

2020-03-16  Siddhartha Bagaria  <sbagaria@grailbio.com>

	* NAMESPACE: Add JSON parsing and printing support
	* R/00classes.R: Idem
	* R/completion.R: Idem
	* R/debug_string.R: Idem
	* R/read.R: Idem
	* inst/tinytest/test_addressbook.R: Idem
	* man/Message-class.Rd: Idem
	* man/readJSON.Rd: Idem
	* src/init.c: Idem
	* src/rprotobuf.h: Idem
	* src/wrapper_Descriptor.cpp: Idem
	* src/wrapper_Message.cpp: Idem

2020-02-08  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.4.15

2020-02-07  Dirk Eddelbuettel  <edd@debian.org>
