@@ -15,3 +15,4 @@ CONTRIBUTING.md
 ^GTAGS
 ^docker
 vignettes/rmd
+deprecated
